...
      }
    },
    "Archive" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "Bold" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "Cancel" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "Captcha" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "Cookies" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "Forum" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "General" : {
      "extractionState" : "manual",
      "localizations" : {
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Общие"
          }
        }
...
      }
    },
    "I am 18 or older" : {
      "extractionState" : "manual",
      "localizations" : {
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Язык"
          }
        }
...
      }
    },
    "New thread" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "No captcha needed" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "Reload" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "Reset" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "Reset statistics" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "Restrictions" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "Save for offline" : {
      "comment" : "A label for a button that saves a thread for offline use.",
      "isCommentAutoGenerated" : true,
...
      }
    },
    "Saved threads" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "Search this board" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "Send" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "Settings" : {
      "extractionState" : "manual",
      "localizations" : {
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Настройки"
          }
        }
...
      }
    },
    "Statistics" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "Text and thumbnails" : {
      "extractionState" : "manual",
      "localizations" : {
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Размер текста"
          }
        }
...
      }
    },
    "Thread actions" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "Threads opened" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "User boards" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "View options" : {
      "extractionState" : "manual",
      "localizations" : {
...
